[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Title.png" type="Texture" id=1]
[ext_resource path="res://UI/Stats.gd" type="Script" id=2]
[ext_resource path="res://UI/Abaddon_Bold_Large.tres" type="DynamicFont" id=4]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/CameraMenu.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "ViewMain"
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -640, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -640, 0 ) ]
}

[node name="GameInstance" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 5 )]

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="Menu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu/MainMenu"]
margin_left = 128.0
margin_top = 32.0
margin_right = 512.0
margin_bottom = 160.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 148.0
margin_top = 164.0
margin_right = 444.0
margin_bottom = 262.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Labels" type="VBoxContainer" parent="Menu/MainMenu/HBoxContainer"]
margin_right = 201.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="Menu/MainMenu/HBoxContainer/Labels"]
margin_right = 201.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
text = "Total Score:"
align = 2

[node name="Label2" type="Label" parent="Menu/MainMenu/HBoxContainer/Labels"]
margin_top = 34.0
margin_right = 201.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 4 )
text = "Total Time:"
align = 2

[node name="Label3" type="Label" parent="Menu/MainMenu/HBoxContainer/Labels"]
margin_top = 68.0
margin_right = 201.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 4 )
text = "Total Restarts:"
align = 2

[node name="Stats" type="VBoxContainer" parent="Menu/MainMenu/HBoxContainer"]
margin_left = 205.0
margin_right = 296.0
margin_bottom = 98.0

[node name="TotalScore" type="Label" parent="Menu/MainMenu/HBoxContainer/Stats"]
margin_right = 91.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
text = "0000000"

[node name="TotalTime" type="Label" parent="Menu/MainMenu/HBoxContainer/Stats"]
margin_top = 34.0
margin_right = 91.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 4 )
text = "00:00"

[node name="TotalRestarts" type="Label" parent="Menu/MainMenu/HBoxContainer/Stats"]
margin_top = 68.0
margin_right = 91.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="Backbutton" type="Button" parent="Menu"]
margin_left = 272.0
margin_top = 296.0
margin_right = 375.0
margin_bottom = 314.0
text = "Back to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ViewMain = SubResource( 1 )
anims/ViewSettings = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
[connection signal="pressed" from="Menu/Backbutton" to="." method="_on_Backbutton_pressed"]
